--- a/src/app/components/bookings-tab/bookings-tab.component.css
+++ b/src/app/components/bookings-tab/bookings-tab.component.css
@@ -114,8 +114,10 @@
 }
 
 .date-select {
-  min-width: 100px;
-  flex: 1;
-  max-width: 120px;
+  width: auto;
+  min-width: 70px;
+  max-width: 90px;
+  padding: 0.4rem 0.5rem;
+  font-size: 0.875rem;
 }
 
