--- a/src/app/components/dashboard-tab/dashboard-tab.component.html
+++ b/src/app/components/dashboard-tab/dashboard-tab.component.html
@@ -1,9 +1,32 @@
 <div class="tab-content">
-  <div class="dashboard-header">
+  <div class="tab-header">
     <h2>{{ 'dashboard.statistics' | translate }}</h2>
-    <div class="date-filter">
-      <label>{{ 'dashboard.selectDate' | translate }}:</label>
-      <input type="date" [(ngModel)]="selectedDate" (change)="onDateChange()" class="form-control">
+    <div class="filters">
+      <div class="filter-group">
+        <label>{{ 'filter.date' | translate }}:</label>
+        <div class="date-input-group">
+          <select [(ngModel)]="selectedDay" (change)="onDateChange()" class="form-control date-select">
+            <option [value]="null">{{ 'common.day' | translate }}</option>
+            <option *ngFor="let day of days" [value]="day">{{ day }}</option>
+          </select>
+          <select [(ngModel)]="selectedMonth" (change)="onDateChange()" class="form-control date-select">
+            <option [value]="null">{{ 'common.month' | translate }}</option>
+            <option *ngFor="let month of months; let i = index" [value]="i + 1">{{ month }}</option>
+          </select>
+          <select [(ngModel)]="selectedYear" (change)="onDateChange()" class="form-control date-select">
+            <option [value]="null">{{ 'common.year' | translate }}</option>
+            <option *ngFor="let year of years" [value]="year">{{ year }}</option>
+          </select>
+        </div>
+        <button class="btn btn-secondary btn-today" (click)="setToday()" style="margin-top: 5px;">
+          <i class="fas fa-calendar-day"></i> {{ 'common.today' | translate }}
+        </button>
+      </div>
+      <div class="filter-group">
+        <button class="btn btn-primary" (click)="exportToPDF()">
+          <i class="fas fa-file-pdf"></i> {{ 'dashboard.exportPDF' | translate }}
+        </button>
+      </div>
     </div>
   </div>
 
